test/modules/vass/use-a-Reflection-function.chpl
// This test uses a module whose name matches
// the name of a function in a module not used implicitly.
//
// Any function in Reflection can be used instead of 'numFields'.

use numFields;
